--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,26 @@ body {
     linear-gradient(90deg, rgb(21, 255, 0), rgb(240, 240, 240));
 }
 
+.titulo {
+  margin-bottom: 180px;
+  font-family: "Arial Narrow", Arial, sans-serif;
+  color: yellow;
+  position: absolute;
+  font-weight: bold;
+  letter-spacing: 10px;
+  opacity: 0;
+  animation: fadeIn 3s ease-in-out forwards;
+  text-align: center;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .flowers {
   position: relative;
   transform: scale(0.9);
